--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -194,9 +194,10 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dr5-gj-0ac" userLabel="NavigationView">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="64"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="white_ellipse" translatesAutoresizingMaskIntoConstraints="NO" id="5s2-t1-QW3">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SA6-Nh-eE0">
                                         <rect key="frame" x="48" y="27" width="356" height="30"/>
-                                    </imageView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="_Placeholder" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="uAf-dO-WUM">
                                         <rect key="frame" x="63" y="27" width="307" height="30"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
@@ -244,19 +245,19 @@
                                 <color key="backgroundColor" red="0.3411764705882353" green="0.72941176470588232" blue="0.5725490196078431" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="LiB-i9-G5L" firstAttribute="top" secondItem="Dr5-gj-0ac" secondAttribute="top" constant="34" id="34u-dM-WY3"/>
+                                    <constraint firstAttribute="bottom" secondItem="SA6-Nh-eE0" secondAttribute="bottom" constant="7" id="4Ki-Dv-FbN"/>
                                     <constraint firstItem="uAf-dO-WUM" firstAttribute="leading" secondItem="VmN-z8-6eW" secondAttribute="trailing" constant="23" id="4pY-NJ-ytD"/>
                                     <constraint firstAttribute="bottom" secondItem="LiB-i9-G5L" secondAttribute="bottom" constant="16" id="6kT-Xt-3um"/>
                                     <constraint firstItem="uAf-dO-WUM" firstAttribute="top" secondItem="Dr5-gj-0ac" secondAttribute="top" constant="27" id="8CH-0o-uZe"/>
                                     <constraint firstAttribute="trailing" secondItem="LiB-i9-G5L" secondAttribute="trailing" constant="21" id="8JY-3a-ipa"/>
+                                    <constraint firstItem="SA6-Nh-eE0" firstAttribute="top" secondItem="Dr5-gj-0ac" secondAttribute="top" constant="27" id="9Eg-9g-0aX"/>
+                                    <constraint firstAttribute="trailing" secondItem="SA6-Nh-eE0" secondAttribute="trailing" constant="10" id="DTQ-0s-krw"/>
                                     <constraint firstItem="VmN-z8-6eW" firstAttribute="top" secondItem="Dr5-gj-0ac" secondAttribute="top" constant="24" id="DhI-zc-ZoW"/>
                                     <constraint firstItem="VmN-z8-6eW" firstAttribute="leading" secondItem="Dr5-gj-0ac" secondAttribute="leading" id="N0Y-qM-XQR"/>
                                     <constraint firstAttribute="height" constant="64" id="NfJ-rG-epb"/>
                                     <constraint firstAttribute="trailing" secondItem="W29-cZ-jxx" secondAttribute="trailing" constant="38" id="Of9-WE-ar6"/>
-                                    <constraint firstAttribute="trailing" secondItem="5s2-t1-QW3" secondAttribute="trailing" constant="10" id="PQ3-tO-i5m"/>
                                     <constraint firstAttribute="bottom" secondItem="uAf-dO-WUM" secondAttribute="bottom" constant="7" id="SKd-60-a3P"/>
-                                    <constraint firstAttribute="bottom" secondItem="5s2-t1-QW3" secondAttribute="bottom" constant="7" id="SxN-64-qvR"/>
-                                    <constraint firstItem="5s2-t1-QW3" firstAttribute="leading" secondItem="VmN-z8-6eW" secondAttribute="trailing" constant="8" id="UEq-8Q-yUp"/>
-                                    <constraint firstItem="5s2-t1-QW3" firstAttribute="top" secondItem="Dr5-gj-0ac" secondAttribute="top" constant="27" id="XIK-Hj-gIA"/>
+                                    <constraint firstItem="SA6-Nh-eE0" firstAttribute="leading" secondItem="VmN-z8-6eW" secondAttribute="trailing" constant="8" id="UNC-gk-tb4"/>
                                     <constraint firstAttribute="trailing" secondItem="TG9-kp-9n4" secondAttribute="trailing" constant="4" id="azC-Vg-qeA"/>
                                     <constraint firstAttribute="bottom" secondItem="W29-cZ-jxx" secondAttribute="bottom" constant="22" id="e6E-bo-nic"/>
                                     <constraint firstItem="TG9-kp-9n4" firstAttribute="top" secondItem="Dr5-gj-0ac" secondAttribute="top" constant="24" id="yRC-wJ-WGy"/>
@@ -409,6 +410,7 @@
                         <outlet property="seperatorView" destination="gkl-pL-Y4B" id="jur-Qn-UjK"/>
                         <outlet property="tableView" destination="BhH-Ju-VVT" id="B8Q-tY-IdA"/>
                         <outlet property="tableViewBottomConstraint" destination="Jtd-vd-xPR" id="k25-bJ-Fr1"/>
+                        <outlet property="whiteEllipseView" destination="SA6-Nh-eE0" id="MWa-g7-rh1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -1180,7 +1182,6 @@ Version 1.0.0</string>
         <image name="phone_inactive" width="20" height="20"/>
         <image name="recording_logo" width="402" height="399"/>
         <image name="tap_to_send" width="139" height="25"/>
-        <image name="white_ellipse" width="356" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="6Da-5y-Gif"/>
